tests/typechecker/should_fail/module_normal.csp
module M
exports
endmodule

M = 0
